--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,13 @@
     height: 50px;
     background-color: yellow;
 }
+
+.destroyer {
+    background-color: brown;
+}
+
+.destroyer-preview {
+    width: 20px;
+    height: 10px;
+    margin: 3px;
+}
