13. style board and createBoard x2.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
+#gamesboard-container {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .game-board {
     width: 200px;
     height: 200px;
+}
+
+.block {
+    width: 20px;
+    height: 20px;
 }
 
 .option-container {
