--- a/public/styles.css
+++ b/public/styles.css
@@ -155,9 +155,9 @@
     font-weight: normal;
   }
 
-  .conencted span,
+  .connected span,
   .ready span {
-    display: inline-block;
+    display: inline-block; 
     width: 1rem;
     height: 1rem;
     background: red;
