--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,26 @@
 body {
-  font-family: "Montserrat", serif;;
+  margin: 0;
+  background-color: #f3f3f3;
+  overflow-x: hidden;
 }
 
+*, *::before, *::after {
+  font-family: "Montserrat", serif;;
+  box-sizing: border-box;
+}
+
+.splash-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 66vh;
+}
+
+.splash-title {
+  font-family: 'Bangers', cursive;
+  font-size: 10rem;
+}
 
 .container {
     display: flex;
