--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
   background-color: #f3f3f3;
-  overflow-x: hidden;
+  overflow-x: hidden ;
 }
 
 *, *::before, *::after {
-  font-family: "Montserrat", serif;;
+  font-family: "Montserrat", sans-serif;;
   box-sizing: border-box;
 }
 
@@ -20,6 +20,41 @@ body {
 .splash-title {
   font-family: 'Bangers', cursive;
   font-size: 10rem;
+}
+
+.splash-battleship-image {
+  position: absolute;
+  bottom: 5vh;
+  right: 0;
+  left: 20vw;
+  width: 100%;
+  transform: rotateY(180deg);
+  pointer-events: none;
+  opacity: .25;
+}
+
+.btn {
+  background-color: hsl(30, 100%, 50%);
+  padding: .5em 1em;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: .2em;
+  color: #333;
+}
+
+.btn:hover, .btn:focus {
+  background-color: hsl(30, 100%, 40%);
+}
+
+.splash-btn {
+  font-size: 2rem;
+  margin-left: 2rem;
+}
+
+.splash-btn:first-child {
+  margin-left: 0;
 }
 
 .container {
