49. Re-style singleplayer battleships and boards.

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,170 +58,99 @@ body {
 }
 
 .container {
-    display: flex;
-  }
-  
-  .grid-user {
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: blue;
-    margin: 20px;
-  }
-  
-  .grid div {
-    width: 40px;
-    height: 40px;
-  }
-  
-  .grid-computer {
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: lightgreen;
-    margin: 20px;
-  }
-  
-  .grid-display {
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-    background-color: yellow;
-  }
-  
-  .destroyer-container {
-    width: 80px;
-    height: 40px;
-    background-color: orange;
-    margin: 10px;
-    display: flex;
-  }
-  .destroyer-container-vertical {
-    width: 40px;
-    height: 80px;
-    background-color: orange;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .submarine-container {
-    width: 120px;
-    height: 40px;
-    background-color: pink;
-    margin: 10px;
-    display: flex;
-  }
-  
-  .submarine-container-vertical {
-    width: 40px;
-    height: 120px;
-    background-color: pink;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .cruiser-container {
-    width: 120px;
-    height: 40px;
-    background-color: purple;
-    margin: 10px;
-    display: flex;
-  }
-  
-  .cruiser-container-vertical {
-    width: 40px;
-    height: 120px;
-    background-color: purple;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .battleship-container {
-    width: 160px;
-    height: 40px;
-    background-color: aqua;
-    margin: 10px;
-    display: flex;
-  }
-  
-  .battleship-container-vertical {
-    width: 40px;
-    height: 160px;
-    background-color: aqua;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  
-  .carrier-container {
-    width: 200px;
-    height: 40px;
-    background-color: green;
-    margin: 10px;
-    display: flex;
-  }
-  
-  .carrier-container-vertical {
-    width: 40px;
-    height: 200px;
-    background-color: green;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  
-  .ship div {
-    width: 40px;
-    height: 40px;
-  }
-  
-  .destroyer {
-    background-color: orange;
-  }
-  
-  .submarine {
-    background-color: pink;
-  }
-  
-  .cruiser {
-    background-color: purple;
-  }
-  
-  .battleship {
-    background-color: aqua;
-  }
-  
-  .carrier {
-    background-color: green;
-  }
-  
-  .boom {
-    background-color: red;
-  }
-  
-  .miss {
-     background-color: black;
-  }
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 
-  .connected, .ready {
-    font-weight: normal;
-  }
+.battleship-grid {
+  margin: 2vmin;
+  display: grid;
+  background-color: hsl(200, 100%, 50%);
+  grid-template-rows: repeat(10, 4.6vmin);
+  grid-template-columns: repeat(10, 4.6vmin);
+}
 
-  .connected span,
-  .ready span {
-    display: inline-block; 
-    width: 1rem;
-    height: 1rem;
-    background: red;
-  }
+.taken, .ship {
+  background-color: hsl(0, 0%, 80%)
+}
 
-  span.green {
-    background: green;
-  }
+.grid-display {
+  display: flex;
+}
+
+.ship > div {
+  width: 4.6vmin;
+  height: 4.6vmin;
+}
+
+.ship {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1vmin;
+  width: calc(4.6vmin * var(--width, 1));
+  height: calc(4.6vmin * var(--height, 1));
+  border-radius: 2.3vmin;
+}
+
+.battleship-grid div {
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.destroyer-container {
+  --width: 2;
+}
+.destroyer-container-vertical {
+  --height: 2;
+}
+
+.cruiser-container,  
+.submarine-container {
+  --width: 3;
+}
+
+.cruiser-container-vertical, 
+.submarine-container-vertical {
+  --height: 3;
+}
+
+.battleship-container {
+  --width: 4;
+}
+
+.battleship-container-vertical {
+  --height: 4; 
+}
+
+
+.carrier-container {
+  --width: 5;
+}
+
+.carrier-container-vertical {
+  --height: 5;
+}
+
+.boom {
+  background-color: red;
+}
+
+.miss {
+    background-color: black;
+}
+
+.connected, .ready {
+  font-weight: normal;
+}
+
+.connected span,
+.ready span {
+  display: inline-block; 
+  width: 1rem;
+  height: 1rem;
+  background: red;
+}
+
+span.green {
+  background: green;
+}
