51. Add border to ships & ripple animation when ships placed.

--- a/public/styles.css
+++ b/public/styles.css
@@ -78,27 +78,76 @@ body {
 }
 
 .taken, .ship {
+  position: relative;
   background-color: hsl(0, 0%, 80%)
 }
 
-.taken.start.vertical {
+.taken.start.vertical ,
+.taken.start.vertical::before {
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
 }
 
-.taken.end.vertical {
+.taken.end.vertical ,
+.taken.end.vertical::before {
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
 }
 
-.taken.start.horizontal {
+.taken.start.horizontal ,
+.taken.start.horizontal::before {
   border-top-left-radius: 50%;
   border-bottom-left-radius: 50%;
 }
 
-.taken.end.horizontal {
+.taken.end.horizontal, 
+.taken.end.horizontal::before {
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
+}
+
+.taken.vertical::before, .taken.horizontal::before {
+  content: '';
+  position: absolute;
+  border: .3vmin solid white;
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+}
+
+.taken.horizontal::before {
+  animation: ripplesY 2s linear infinite;
+  border-left: none;
+  border-right: none;
+}
+
+.taken.vertical::before {
+  animation: ripplesX 2s linear infinite;
+  border-top: none;
+  border-bottom: none;
+}
+
+@keyframes ripplesX {
+  0% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleX(1.5);
+  }
+}
+
+@keyframes ripplesY {
+  0% {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleY(1.5);
+  }
 }
 
 .grid-display {
