--- a/public/styles.css
+++ b/public/styles.css
@@ -123,7 +123,7 @@ body {
 }
 
 .taken.vertical::before {
-  animation: ripplesX 2s linear infinite;
+  animation: ripplesX 1.85s linear infinite;
   border-top: none;
   border-bottom: none;
 }
@@ -220,12 +220,27 @@ body {
   margin: 1rem;
 }
 
-.boom {
-  background-color: red;
+.miss , .boom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.miss {
-    background-color: black;
+.boom::after ,
+.miss::after {
+  content: '';
+  position:absolute;
+  border-radius: 100%;
+  width: 3vmin;
+  height: 3vmin;
+}
+
+.miss::after {
+  background: white;
+}
+
+.boom::after {
+  background-color: red;
 }
 
 .connected, .ready {
