--- a/public/styles.css
+++ b/public/styles.css
@@ -231,8 +231,8 @@ body {
   content: '';
   position:absolute;
   border-radius: 100%;
-  width: 3vmin;
-  height: 3vmin;
+  width: 2vmin;
+  height: 2vmin;
 }
 
 .miss::after {
@@ -241,6 +241,37 @@ body {
 
 .boom::after {
   background-color: red;
+}
+
+.miss::before ,
+.boom::before {
+  content: '';
+  position: absolute;
+  animation: hit .2s ease-out forwards;
+  border-width: 1vmin;
+  border-style: solid;
+  border-radius: 100%;
+  width: 2vmin;
+  height: 2vmin;
+}
+
+.boom::before {
+  border-color: red;
+}
+
+.miss::before {
+  border-color: white ;
+}
+
+@keyframes hit {
+  0% {
+    opacity: 1;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(4);
+  }
 }
 
 .connected, .ready {
