--- a/public/styles.css
+++ b/public/styles.css
@@ -72,7 +72,8 @@ body {
   grid-template-columns: repeat(10, 4.6vmin);
 }
 
-.grid-computer > .taken {
+.grid-computer > .taken ,
+.grid-computer > .boom {
   background-color: hsl(200, 100%, 50%) !important;
   border-radius: 0 !important;
 }
@@ -243,20 +244,18 @@ body {
   background-color: red;
 }
 
-.miss::before ,
-.boom::before {
+.miss::before {
   content: '';
   position: absolute;
   animation: hit .2s ease-out forwards;
-  border-width: 1vmin;
-  border-style: solid;
+  border: 1vmin solid white;
   border-radius: 100%;
   width: 2vmin;
   height: 2vmin;
 }
 
-.boom::before {
-  border-color: red;
+.boom {
+  animation: boom .2s ease-out forwards;
 }
 
 .miss::before {
@@ -274,18 +273,28 @@ body {
   }
 }
 
+@keyframes boom {
+  0% {
+    background-color: red;
+
+  }
+  100% {
+    background-color: hsla(0, 0%, 80%);;
+  }
+}
+
+.player {
+  margin: 2vmin;
+}
+
 .connected, .ready {
   font-weight: normal;
+  opacity: .25;
+  text-decoration: line-through;
 }
 
-.connected span,
-.ready span {
-  display: inline-block; 
-  width: 1rem;
-  height: 1rem;
-  background: red;
-}
-
-span.green {
-  background: green;
+.connected.active,
+.ready.active {
+  opacity: 1;
+  text-decoration: none;
 }
